// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Snapshots Without props should match snapshot with a default list 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    data={
      Array [
        Object {
          "key": "Devin",
        },
        Object {
          "key": "Dan",
        },
        Object {
          "key": "Dominic",
        },
        Object {
          "key": "Jackson",
        },
        Object {
          "key": "James",
        },
        Object {
          "key": "Joel",
        },
        Object {
          "key": "John",
        },
        Object {
          "key": "Jillian",
        },
        Object {
          "key": "Jimmy",
        },
        Object {
          "key": "Julie",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={false}
    initialNumToRender={10}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "width": "100%",
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Devin
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Dan
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Dominic
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Jackson
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          James
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Joel
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          John
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Jillian
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Jimmy
        </Text>
      </View>
    </View>
    <View
      style={null}
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Julie
        </Text>
      </View>
    </View>
  </ScrollView>
</View>
`;

exports[`<List /> Snapshots Without props should match snapshot with a horizontal list 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    data={
      Array [
        Object {
          "key": "Devin",
        },
        Object {
          "key": "Dan",
        },
        Object {
          "key": "Dominic",
        },
        Object {
          "key": "Jackson",
        },
        Object {
          "key": "James",
        },
        Object {
          "key": "Joel",
        },
        Object {
          "key": "John",
        },
        Object {
          "key": "Jillian",
        },
        Object {
          "key": "Jimmy",
        },
        Object {
          "key": "Julie",
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "width": "100%",
        },
      ]
    }
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Devin
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Dan
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Dominic
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Jackson
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          James
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Joel
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          John
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Jillian
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Jimmy
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        divided={true}
        style={
          Array [
            Object {
              "borderBottomColor": "#F5F5FA",
              "borderBottomWidth": 1,
              "paddingBottom": 20,
              "paddingLeft": 24,
              "paddingRight": 24,
              "paddingTop": 20,
            },
          ]
        }
      >
        <Text>
          Julie
        </Text>
      </View>
    </View>
  </ScrollView>
</View>
`;
